fix: icon alignments

--- a/src/content.less
+++ b/src/content.less
@@ -362,7 +362,7 @@
               width: 16px;
               height: 16px;
               object-fit: contain;
-              vertical-align: middle;
+              vertical-align: text-bottom;
               padding-left: 4px;
               box-sizing: content-box;
 
